--- a/src/sample/GUI/GUI.fxml
+++ b/src/sample/GUI/GUI.fxml
@@ -1,8 +1,31 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Text?>
+
+<GridPane alignment="center" hgap="10" prefHeight="242.0" prefWidth="447.0" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.Controller">
+   <columnConstraints>
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+   </rowConstraints>
+   <children>
+      <AnchorPane prefHeight="258.0" prefWidth="447.0">
+         <children>
+            <ComboBox fx:id="comboBoxPorts" layoutX="14.0" layoutY="28.0" prefWidth="150.0" />
+            <TextArea fx:id="resultsArea" layoutX="225.0" layoutY="28.0" prefHeight="200.0" prefWidth="200.0" />
+            <Text layoutX="224.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LOG" />
+            <Button fx:id="diodeOn" layoutX="14.0" layoutY="96.0" mnemonicParsing="false" onAction="#setDiodeOn" text="Włącz" />
+            <Button fx:id="diodeOff" layoutX="89.0" layoutY="96.0" mnemonicParsing="false" onAction="#setDiodeOff" text="Wyłącz" />
+            <Text layoutX="14.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sterowanie Diodą" />
+         </children>
+      </AnchorPane>
+   </children>
 </GridPane>
