--- a/src/sample/GUI/GUI.fxml
+++ b/src/sample/GUI/GUI.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<GridPane alignment="center" hgap="10" prefHeight="242.0" prefWidth="447.0" vgap="10" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.Controller">
+<GridPane alignment="center" hgap="10" prefHeight="242.0" prefWidth="447.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.Controller">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -25,6 +25,7 @@
             <Button fx:id="diodeOn" layoutX="14.0" layoutY="96.0" mnemonicParsing="false" onAction="#setDiodeOn" text="Włącz" />
             <Button fx:id="diodeOff" layoutX="89.0" layoutY="96.0" mnemonicParsing="false" onAction="#setDiodeOff" text="Wyłącz" />
             <Text layoutX="14.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sterowanie Diodą" />
+            <Text layoutX="14.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wybierz port z listy" />
          </children>
       </AnchorPane>
    </children>
