--- a/src/sample/GUI/GUI.fxml
+++ b/src/sample/GUI/GUI.fxml
@@ -8,22 +8,24 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
-
-<GridPane alignment="center" hgap="10" prefHeight="242.0" prefWidth="447.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.Controller">
+<GridPane alignment="center" hgap="10" prefHeight="242.0" prefWidth="447.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller.Controller">
    <columnConstraints>
-      <ColumnConstraints />
+      <ColumnConstraints >
    </columnConstraints>
    <rowConstraints>
       <RowConstraints />
    </rowConstraints>
    <children>
-      <AnchorPane prefHeight="258.0" prefWidth="447.0">
+      <AnchorPane prefHeight="281.0" prefWidth="450.0">
          <children>
             <ComboBox fx:id="comboBoxPorts" layoutX="14.0" layoutY="28.0" onAction="#setPorts" prefWidth="150.0" promptText="Wybierz Port" />
             <TextArea fx:id="resultsArea" layoutX="225.0" layoutY="28.0" prefHeight="200.0" prefWidth="200.0" />
+            <TextArea fx:id="resultsButton" editable="false" layoutX="14.0" layoutY="180.0" prefHeight="27.0" prefWidth="150.0" />
             <Text layoutX="224.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LOG" />
-            <Button fx:id="diodeOn" layoutX="14.0" layoutY="96.0" mnemonicParsing="false" onAction="#setDiodeOn" text="Włącz" />
-            <Button fx:id="diodeOff" layoutX="89.0" layoutY="96.0" mnemonicParsing="false" onAction="#setDiodeOff" text="Wyłącz" />
+            <Button fx:id="diodeOn" layoutX="14.0" layoutY="88.0" mnemonicParsing="false" onAction="#setDiodeOn" text="Włącz" />
+            <Button fx:id="diodeOff" layoutX="89.0" layoutY="88.0" mnemonicParsing="false" onAction="#setDiodeOff" text="Wyłącz" />
+            <Button fx:id="readButton" layoutX="14.0" layoutY="140.0" mnemonicParsing="false" onAction="#setTextOn" text="Odczytaj stan" />
+            <Text layoutX="14.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reakcja na button" />
             <Text layoutX="14.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sterowanie Diodą" />
             <Text layoutX="14.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wybierz port z listy" />
          </children>
